<resources>
    <string name="app_name">Coffee Villa</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="topping">Topping</string>
    <string name="chocolate">Chocolate</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="number">0</string>
    <string name="quantity1">Quantity</string>
    <string name="order">Order</string>
    <string name="summary">Summary</string>
    <string name="cost_10">Cost $10</string>
    <string name="cost_5">Cost $5</string>
    <string name="cost_51">(Cost $5)</string>
    <string name="cost_101">(Cost $10)</string>
</resources>